--- a/src/scss/settings/_z-index.scss
+++ b/src/scss/settings/_z-index.scss
@@ -1,5 +1,5 @@
 $z-index-header: 100;
-$z-index-lang: 10;
+$z-index-lang: 60;
 $z-index-menu: 50;
 $z-index-fixed: 30;
 $z-index-go-up: 400;
